switch bitcoin_height to Option
