# emily/handler/src/database/entries/deposit.rs
@@ -841,7 +841,7 @@ mod tests {
         let chainstate = Chainstate {
             stacks_block_height: reorg_height,
             stacks_block_hash: reorg_hash.to_string(),
-            bitcoin_block_height: 0,
+            bitcoin_block_height: Some(0),
         };
         deposit.reorganize_around(&chainstate).unwrap();
 
